--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,25 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependency directories
+node_modules/
+
+# Build output
+build/
+dist/
+dist-ssr/
+.next/
+out/
+
+# Environment variables
+.env
+.env.*.local
 *.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
@@ -23,4 +33,18 @@ dist-ssr
 *.sln
 *.sw?
 
-*.env
+# Testing
+coverage/
+*.lcov
+
+# Misc
+*.tgz
+*.zip
+*.bak
+*.tmp
+*.cache
+.cache/
+.cache-loader/
+.pnpm-debug.log
+.eslintcache
+
