--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3"
+    "react-loaders": "^3.0.1",
+    "react-responsive": "^10.0.1",
+    "react-router-dom": "^7.6.3",
+    "respinner": "^4.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
