--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/quicksand": "^5.2.8",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "dotenv": "^17.2.0",
     "jsqr": "^1.4.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
