--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-easy-crop": "^5.5.0",
     "react-loaders": "^3.0.1",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.6.3",
