--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "dotenv": "^17.2.0",
+    "jspdf": "^3.0.1",
     "jsqr": "^1.4.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
