--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@fontsource/quicksand": "^5.2.8",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.0",
     "jspdf": "^3.0.1",
     "jsqr": "^1.4.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.0",
     "react-easy-crop": "^5.5.0",
     "react-loaders": "^3.0.1",
