--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.0",
     "react-easy-crop": "^5.5.0",
+    "react-icons": "^5.5.0",
     "react-loaders": "^3.0.1",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.6.3",
